LPS-85140 Language key

--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language.properties
@@ -17,3 +17,4 @@ new-manual-asset-list=New Manual Asset List
 only-one-rule-with-the-combination-x-is-supported=Only one rule with the combination {0} is supported.
 ordering=Ordering
 there-are-no-asset-lists=There are no asset lists.
+view-content=View Content
