--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
@@ -1,5 +1,6 @@
 background-color=Background Color
 background-image=Background Image
+browse-all=Browse All
 changes-saved-at-x=Changes saved at {0}.
 container=Container
 do-you-want-to-leave-this-site=Do you want to leave this site? Changes you made may not be saved.
@@ -26,6 +27,7 @@ new-experience=New Experience
 experience-name=Experience Name
 show-editable-areas=Show Editable Areas
 space-between-columns=Space Between Columns
+specific-content=Specific Content
 text-alignment=Text Alignment
 text-color=Text Color
 text-properties=Text properties
@@ -33,6 +35,8 @@ text-style=Text Style
 the-page-editor-is-empty=The page editor is empty.
 this-area-is-defined-by-the-theme-to-change-theme-settings-go-to-page-configuration=This area is defined by the theme. To change theme settings go to page configuration.
 translating=Translating
+unmap=Unmap
 unmap-area=Unmap Area
 widgets=Widgets
+x-default={0} (Default)
 you-do-not-have-any-sections=You do not have any sections.
