LPS-91291 Language keys

--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
@@ -6,6 +6,7 @@ changes-saved-at-x=Changes saved at {0}.
 container=Container
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted.
 do-you-want-to-leave-this-site=Do you want to leave this site? Changes you made may not be saved.
+draft-saved-at-x=Draft saved at {0}.
 experience=Experience
 experience-name=Experience Name
 fixed-width=Fixed Width
@@ -19,6 +20,7 @@ no-asset-type-selected=No Asset Type Selected
 not-translated=Not translated
 padding-horizontal=Padding H
 padding-vertical=Padding V
+publish-page=Publish Page
 saving-changes=Saving changes...
 secondary=Secondary
 section=Section
