--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
@@ -3,6 +3,7 @@ background-image=Background Image
 changes-saved-at-x=Changes saved at {0}.
 container=Container
 do-you-want-to-leave-this-site=Do you want to leave this site? Changes you made may not be saved.
+draft-saved-at-x=Draft saved at {0}.
 fixed-width=Fixed Width
 fluid=Fluid
 map-background=Map Background
@@ -13,6 +14,7 @@ no-asset-type-selected=No Asset Type Selected
 not-translated=Not translated
 padding-horizontal=Padding H
 padding-vertical=Padding V
+publish-page=Publish Page
 saving-changes=Saving changes...
 section=Section
 section-builder=Section Builder
