--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
@@ -4,6 +4,7 @@ background-image=Background Image
 browse-all=Browse All
 changes-saved-at-x=Changes saved at {0}.
 container=Container
+content-type=Content Type
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted.
 do-you-want-to-leave-this-site=Do you want to leave this site? Changes you made may not be saved.
 experience=Experience
@@ -19,6 +20,7 @@ no-asset-type-selected=No Asset Type Selected
 not-translated=Not translated
 padding-horizontal=Padding H
 padding-vertical=Padding V
+saved=Saved
 saving-changes=Saving changes...
 secondary=Secondary
 section=Section
@@ -42,4 +44,5 @@ unmap=Unmap
 unmap-area=Unmap Area
 widgets=Widgets
 x-default={0} (Default)
+you-can-select-here-the-content-source-for-this-display-page=You can select here the content source for this Display Page
 you-do-not-have-any-sections=You do not have any sections.
