--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
@@ -44,5 +44,5 @@ unmap=Unmap
 unmap-area=Unmap Area
 widgets=Widgets
 x-default={0} (Default)
-you-can-select-here-the-content-source-for-this-display-page=You can select here the content source for this Display Page
+you-can-select-here-the-content-source-for-this-display-page=You can select here the content source for This Display Page
 you-do-not-have-any-sections=You do not have any sections.
