--- a/modules/apps/change-tracking/change-tracking-change-lists-web/package.json
+++ b/modules/apps/change-tracking/change-tracking-change-lists-web/package.json
@@ -9,7 +9,7 @@
 		"metal-state": "^2.13.2"
 	},
 	"devDependencies": {
-		"liferay-npm-scripts": "^1.2.0"
+		"liferay-npm-scripts": "1.2.0"
 	},
 	"name": "change-tracking-change-lists-web",
 	"scripts": {
