--- a/modules/apps/frontend-theme-fjord/frontend-theme-fjord-site-initializer/build.gradle
+++ b/modules/apps/frontend-theme-fjord/frontend-theme-fjord-site-initializer/build.gradle
@@ -7,6 +7,7 @@ dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	compileOnly project(":apps:fragment:fragment-api")
 	compileOnly project(":apps:layout:layout-admin-api")
+	compileOnly project(":apps:layout:layout-api")
 	compileOnly project(":apps:layout:layout-page-template-api")
 	compileOnly project(":apps:site:site-api")
 	compileOnly project(":core:petra:petra-string")
