--- a/modules/apps/frontend-theme-westeros-bank/frontend-theme-westeros-bank-site-initializer/build.gradle
+++ b/modules/apps/frontend-theme-westeros-bank/frontend-theme-westeros-bank-site-initializer/build.gradle
@@ -10,6 +10,7 @@ dependencies {
 	compileOnly project(":apps:fragment:fragment-api")
 	compileOnly project(":apps:journal:journal-api")
 	compileOnly project(":apps:layout:layout-admin-api")
+	compileOnly project(":apps:layout:layout-api")
 	compileOnly project(":apps:layout:layout-page-template-api")
 	compileOnly project(":apps:site-navigation:site-navigation-api")
 	compileOnly project(":apps:site:site-api")
